--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <form action="POST">
+    
+    <form action="POST" id="form">
+        <h1>Connexion FTP</h1>
         <label for="host">Host</label>
         <input type="text" name="host" value="localhost">
         <label for="user">User</label>
