--- a/member.html
+++ b/member.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <div id="container"><div class="list"></div></div>
     <script src="js/function.js"></script>
     <script src="js/member.js"></script>
 </body>
