add displayError function

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <form action="POST" id="form">
         <h1>Connexion FTP</h1>
+        <div class="error"><p class="text"></p></div>
         <label for="host">Host</label>
         <input type="text" name="host" value="localhost">
         <label for="user">User</label>
@@ -19,6 +20,7 @@
         <input type="password" name="password">
         <input type="submit" name="submit" value="Se connecter">
     </form>
+    <script src="js/function.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
