--- a/member.html
+++ b/member.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="container"><div class="list"></div></div>
+    </table>
     <script src="js/function.js"></script>
     <script src="js/member.js"></script>
 </body>
